; ModuleID = '/home/carl/AnghaBench/RetroArch/audio/drivers/extr_ps2_audio.c_audioConfigure.c'
source_filename = "/home/carl/AnghaBench/RetroArch/audio/drivers/extr_ps2_audio.c_audioConfigure.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.audsrv_fmt_t = type { i32, i32, i32 }

@AUDIO_BITS = common dso_local global i32 0, align 4
@AUDIO_CHANNELS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"set format returned %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [34 x i8] c"audsrv returned error string: %s\0A\00", align 1
@MAX_VOLUME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @audioConfigure to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @audioConfigure(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.audsrv_fmt_t, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* @AUDIO_BITS, align 4
  %8 = getelementptr inbounds %struct.audsrv_fmt_t, %struct.audsrv_fmt_t* %6, i32 0, i32 2
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* %4, align 4
  %10 = getelementptr inbounds %struct.audsrv_fmt_t, %struct.audsrv_fmt_t* %6, i32 0, i32 0
  store i32 %9, i32* %10, align 4
  %11 = load i32, i32* @AUDIO_CHANNELS, align 4
  %12 = getelementptr inbounds %struct.audsrv_fmt_t, %struct.audsrv_fmt_t* %6, i32 0, i32 1
  store i32 %11, i32* %12, align 4
  %13 = call i32 @audsrv_set_format(%struct.audsrv_fmt_t* %6)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %5, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %21

16:                                               ; preds = %2
  %17 = load i32, i32* %5, align 4
  %18 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %17)
  %19 = call i8* (...) @audsrv_get_error_string()
  %20 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0), i8* %19)
  br label %21

21:                                               ; preds = %16, %2
  %22 = load i32, i32* @MAX_VOLUME, align 4
  %23 = call i32 @audsrv_set_volume(i32 %22)
  ret void
}

declare dso_local i32 @audsrv_set_format(%struct.audsrv_fmt_t*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i8* @audsrv_get_error_string(...) #1

declare dso_local i32 @audsrv_set_volume(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
